--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "next": "^15.0.3",
     "next.js": "^1.0.3",
     "react": "^18.3.1",
+    "react-card-flip": "^1.2.3",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1"
   },
