--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "firebase": "^11.0.2",
     "framer-motion": "^11.15.0",
+    "lucide-react": "^0.469.0",
     "next": "^15.0.3",
     "next.js": "^1.0.3",
     "react": "^18.3.1",
